Fix blueksy wrapping on desktop view

--- a/src/bluesky.css
+++ b/src/bluesky.css
@@ -61,6 +61,9 @@
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 
+.bluesky-post p {
+  overflow-wrap: anywhere;
+}
 @media screen and (max-width: 768px) {
   body {
     flex-direction: column;
